// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`read fixture javascript file 1`] = `
[
  {
    "loc": SourceLocation {
      "end": Position {
        "column": 0,
        "index": 305,
        "line": 20,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 0,
        "line": 1,
      },
    },
    "nodeId": "",
    "parentId": "",
    "root": true,
    "type": "File",
  },
  {
    "field": "program",
    "loc": SourceLocation {
      "end": Position {
        "column": 0,
        "index": 305,
        "line": 20,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 0,
        "line": 1,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "File",
    "type": "Program",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 1,
        "index": 124,
        "line": 7,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 0,
        "line": 1,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "Program",
    "type": "ClassDeclaration",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 1,
        "index": 124,
        "line": 7,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 15,
        "index": 15,
        "line": 1,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassDeclaration",
    "type": "ClassBody",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 19,
        "index": 36,
        "line": 2,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 1,
        "index": 18,
        "line": 2,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassBody",
    "type": "ClassProperty",
    "value": Node {
      "end": 35,
      "extra": {
        "raw": ""ciao"",
        "rawValue": "ciao",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 18,
          "index": 35,
          "line": 2,
        },
        "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
        "identifierName": undefined,
        "start": Position {
          "column": 12,
          "index": 29,
          "line": 2,
        },
      },
      "start": 29,
      "type": "StringLiteral",
      "value": "ciao",
    },
  },
  {
    "field": "key",
    "loc": SourceLocation {
      "end": Position {
        "column": 9,
        "index": 26,
        "line": 2,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 1,
        "index": 18,
        "line": 2,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassProperty",
    "type": "Identifier",
  },
  {
    "field": "value",
    "loc": SourceLocation {
      "end": Position {
        "column": 18,
        "index": 35,
        "line": 2,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 12,
        "index": 29,
        "line": 2,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassProperty",
    "type": "StringLiteral",
    "value": "ciao",
  },
  {
    "field": "value",
    "nodeId": "",
    "parentId": "",
    "parentType": "StringLiteral",
  },
  {
    "field": "body",
    "kind": "constructor",
    "loc": SourceLocation {
      "end": Position {
        "column": 2,
        "index": 122,
        "line": 6,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 1,
        "index": 38,
        "line": 3,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassBody",
    "type": "ClassMethod",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 2,
        "index": 122,
        "line": 6,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 23,
        "index": 60,
        "line": 3,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassMethod",
    "type": "BlockStatement",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 27,
        "index": 89,
        "line": 4,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 2,
        "index": 64,
        "line": 4,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "BlockStatement",
    "type": "ExpressionStatement",
  },
  {
    "field": "expression",
    "loc": SourceLocation {
      "end": Position {
        "column": 26,
        "index": 88,
        "line": 4,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 2,
        "index": 64,
        "line": 4,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ExpressionStatement",
    "type": "AssignmentExpression",
  },
  {
    "field": "left",
    "loc": SourceLocation {
      "end": Position {
        "column": 15,
        "index": 77,
        "line": 4,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 2,
        "index": 64,
        "line": 4,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "AssignmentExpression",
    "type": "MemberExpression",
  },
  {
    "field": "property",
    "loc": SourceLocation {
      "end": Position {
        "column": 15,
        "index": 77,
        "line": 4,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 7,
        "index": 69,
        "line": 4,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "MemberExpression",
    "type": "Identifier",
  },
  {
    "field": "object",
    "loc": SourceLocation {
      "end": Position {
        "column": 6,
        "index": 68,
        "line": 4,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 2,
        "index": 64,
        "line": 4,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "MemberExpression",
    "type": "ThisExpression",
  },
  {
    "field": "right",
    "loc": SourceLocation {
      "end": Position {
        "column": 26,
        "index": 88,
        "line": 4,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 18,
        "index": 80,
        "line": 4,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "AssignmentExpression",
    "type": "Identifier",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 29,
        "index": 119,
        "line": 5,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 2,
        "index": 92,
        "line": 5,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "BlockStatement",
    "type": "ExpressionStatement",
  },
  {
    "field": "expression",
    "loc": SourceLocation {
      "end": Position {
        "column": 28,
        "index": 118,
        "line": 5,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 2,
        "index": 92,
        "line": 5,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ExpressionStatement",
    "type": "CallExpression",
  },
  {
    "field": "arguments",
    "loc": SourceLocation {
      "end": Position {
        "column": 27,
        "index": 117,
        "line": 5,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 14,
        "index": 104,
        "line": 5,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "CallExpression",
    "type": "MemberExpression",
  },
  {
    "field": "property",
    "loc": SourceLocation {
      "end": Position {
        "column": 27,
        "index": 117,
        "line": 5,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 19,
        "index": 109,
        "line": 5,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "MemberExpression",
    "type": "Identifier",
  },
  {
    "field": "object",
    "loc": SourceLocation {
      "end": Position {
        "column": 18,
        "index": 108,
        "line": 5,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 14,
        "index": 104,
        "line": 5,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "MemberExpression",
    "type": "ThisExpression",
  },
  {
    "field": "callee",
    "loc": SourceLocation {
      "end": Position {
        "column": 13,
        "index": 103,
        "line": 5,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 2,
        "index": 92,
        "line": 5,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "CallExpression",
    "type": "MemberExpression",
  },
  {
    "field": "property",
    "loc": SourceLocation {
      "end": Position {
        "column": 13,
        "index": 103,
        "line": 5,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "log",
      "start": Position {
        "column": 10,
        "index": 100,
        "line": 5,
      },
    },
    "name": "log",
    "nodeId": "",
    "parentId": "",
    "parentType": "MemberExpression",
    "type": "Identifier",
  },
  {
    "field": "object",
    "loc": SourceLocation {
      "end": Position {
        "column": 9,
        "index": 99,
        "line": 5,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "console",
      "start": Position {
        "column": 2,
        "index": 92,
        "line": 5,
      },
    },
    "name": "console",
    "nodeId": "",
    "parentId": "",
    "parentType": "MemberExpression",
    "type": "Identifier",
  },
  {
    "field": "params",
    "loc": SourceLocation {
      "end": Position {
        "column": 21,
        "index": 58,
        "line": 3,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 13,
        "index": 50,
        "line": 3,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassMethod",
    "type": "Identifier",
  },
  {
    "field": "key",
    "loc": SourceLocation {
      "end": Position {
        "column": 12,
        "index": 49,
        "line": 3,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "constructor",
      "start": Position {
        "column": 1,
        "index": 38,
        "line": 3,
      },
    },
    "name": "constructor",
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassMethod",
    "type": "Identifier",
  },
  {
    "field": "id",
    "loc": SourceLocation {
      "end": Position {
        "column": 14,
        "index": 14,
        "line": 1,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "SayHello",
      "start": Position {
        "column": 6,
        "index": 6,
        "line": 1,
      },
    },
    "name": "SayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassDeclaration",
    "type": "Identifier",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 21,
        "index": 146,
        "line": 8,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 125,
        "line": 8,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "Program",
    "type": "ExpressionStatement",
  },
  {
    "field": "expression",
    "loc": SourceLocation {
      "end": Position {
        "column": 20,
        "index": 145,
        "line": 8,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 125,
        "line": 8,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ExpressionStatement",
    "type": "NewExpression",
  },
  {
    "field": "arguments",
    "loc": SourceLocation {
      "end": Position {
        "column": 19,
        "index": 144,
        "line": 8,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 13,
        "index": 138,
        "line": 8,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "NewExpression",
    "type": "StringLiteral",
    "value": "ciao",
  },
  {
    "field": "value",
    "nodeId": "",
    "parentId": "",
    "parentType": "StringLiteral",
  },
  {
    "field": "callee",
    "loc": SourceLocation {
      "end": Position {
        "column": 12,
        "index": 137,
        "line": 8,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "SayHello",
      "start": Position {
        "column": 4,
        "index": 129,
        "line": 8,
      },
    },
    "name": "SayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "NewExpression",
    "type": "Identifier",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 1,
        "index": 232,
        "line": 13,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 148,
        "line": 10,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "Program",
    "type": "FunctionDeclaration",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 1,
        "index": 232,
        "line": 13,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 24,
        "index": 172,
        "line": 10,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "FunctionDeclaration",
    "type": "BlockStatement",
  },
  {
    "field": "body",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 22,
        "index": 196,
        "line": 11,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 1,
        "index": 175,
        "line": 11,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "BlockStatement",
    "type": "VariableDeclaration",
  },
  {
    "field": "declarations",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 21,
        "index": 195,
        "line": 11,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 7,
        "index": 181,
        "line": 11,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclaration",
    "type": "VariableDeclarator",
  },
  {
    "field": "id",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 12,
        "index": 186,
        "line": 11,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "greet",
      "start": Position {
        "column": 7,
        "index": 181,
        "line": 11,
      },
    },
    "name": "greet",
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclarator",
    "type": "Identifier",
  },
  {
    "field": "init",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 21,
        "index": 195,
        "line": 11,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 15,
        "index": 189,
        "line": 11,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclarator",
    "type": "StringLiteral",
    "value": "ciao",
  },
  {
    "field": "value",
    "kind": "const",
    "nodeId": "",
    "parentId": "",
    "parentType": "StringLiteral",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 33,
        "index": 230,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 1,
        "index": 198,
        "line": 12,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "BlockStatement",
    "type": "ExpressionStatement",
  },
  {
    "field": "expression",
    "loc": SourceLocation {
      "end": Position {
        "column": 32,
        "index": 229,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 1,
        "index": 198,
        "line": 12,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ExpressionStatement",
    "type": "CallExpression",
  },
  {
    "field": "arguments",
    "loc": SourceLocation {
      "end": Position {
        "column": 31,
        "index": 228,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 13,
        "index": 210,
        "line": 12,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "CallExpression",
    "type": "TemplateLiteral",
  },
  {
    "field": "expressions",
    "loc": SourceLocation {
      "end": Position {
        "column": 21,
        "index": 218,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "greet",
      "start": Position {
        "column": 16,
        "index": 213,
        "line": 12,
      },
    },
    "name": "greet",
    "nodeId": "",
    "parentId": "",
    "parentType": "TemplateLiteral",
    "type": "Identifier",
  },
  {
    "field": "expressions",
    "loc": SourceLocation {
      "end": Position {
        "column": 29,
        "index": 226,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "name",
      "start": Position {
        "column": 25,
        "index": 222,
        "line": 12,
      },
    },
    "name": "name",
    "nodeId": "",
    "parentId": "",
    "parentType": "TemplateLiteral",
    "type": "Identifier",
  },
  {
    "field": "quasis",
    "loc": SourceLocation {
      "end": Position {
        "column": 14,
        "index": 211,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 14,
        "index": 211,
        "line": 12,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "TemplateLiteral",
    "type": "TemplateElement",
    "value": {
      "cooked": "",
      "raw": "",
    },
  },
  {
    "field": "value",
    "nodeId": "",
    "parentId": "",
    "parentType": "TemplateElement",
  },
  {
    "field": "quasis",
    "loc": SourceLocation {
      "end": Position {
        "column": 23,
        "index": 220,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 22,
        "index": 219,
        "line": 12,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "TemplateLiteral",
    "type": "TemplateElement",
    "value": {
      "cooked": " ",
      "raw": " ",
    },
  },
  {
    "field": "value",
    "nodeId": "",
    "parentId": "",
    "parentType": "TemplateElement",
  },
  {
    "field": "quasis",
    "loc": SourceLocation {
      "end": Position {
        "column": 30,
        "index": 227,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 30,
        "index": 227,
        "line": 12,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "TemplateLiteral",
    "type": "TemplateElement",
    "value": {
      "cooked": "",
      "raw": "",
    },
  },
  {
    "field": "value",
    "nodeId": "",
    "parentId": "",
    "parentType": "TemplateElement",
  },
  {
    "field": "callee",
    "loc": SourceLocation {
      "end": Position {
        "column": 12,
        "index": 209,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 1,
        "index": 198,
        "line": 12,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "CallExpression",
    "type": "MemberExpression",
  },
  {
    "field": "property",
    "loc": SourceLocation {
      "end": Position {
        "column": 12,
        "index": 209,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "log",
      "start": Position {
        "column": 9,
        "index": 206,
        "line": 12,
      },
    },
    "name": "log",
    "nodeId": "",
    "parentId": "",
    "parentType": "MemberExpression",
    "type": "Identifier",
  },
  {
    "field": "object",
    "loc": SourceLocation {
      "end": Position {
        "column": 8,
        "index": 205,
        "line": 12,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "console",
      "start": Position {
        "column": 1,
        "index": 198,
        "line": 12,
      },
    },
    "name": "console",
    "nodeId": "",
    "parentId": "",
    "parentType": "MemberExpression",
    "type": "Identifier",
  },
  {
    "field": "id",
    "loc": SourceLocation {
      "end": Position {
        "column": 17,
        "index": 165,
        "line": 10,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 9,
        "index": 157,
        "line": 10,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "FunctionDeclaration",
    "type": "Identifier",
  },
  {
    "field": "params",
    "loc": SourceLocation {
      "end": Position {
        "column": 22,
        "index": 170,
        "line": 10,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "name",
      "start": Position {
        "column": 18,
        "index": 166,
        "line": 10,
      },
    },
    "name": "name",
    "nodeId": "",
    "parentId": "",
    "parentType": "FunctionDeclaration",
    "type": "Identifier",
  },
  {
    "field": "body",
    "kind": "let",
    "loc": SourceLocation {
      "end": Position {
        "column": 19,
        "index": 253,
        "line": 15,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 234,
        "line": 15,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "Program",
    "type": "VariableDeclaration",
  },
  {
    "field": "declarations",
    "kind": "let",
    "loc": SourceLocation {
      "end": Position {
        "column": 18,
        "index": 252,
        "line": 15,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 4,
        "index": 238,
        "line": 15,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclaration",
    "type": "VariableDeclarator",
  },
  {
    "field": "id",
    "kind": "let",
    "loc": SourceLocation {
      "end": Position {
        "column": 9,
        "index": 243,
        "line": 15,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "greet",
      "start": Position {
        "column": 4,
        "index": 238,
        "line": 15,
      },
    },
    "name": "greet",
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclarator",
    "type": "Identifier",
  },
  {
    "field": "init",
    "kind": "let",
    "loc": SourceLocation {
      "end": Position {
        "column": 18,
        "index": 252,
        "line": 15,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 12,
        "index": 246,
        "line": 15,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclarator",
    "type": "StringLiteral",
    "value": "ciao",
  },
  {
    "field": "value",
    "kind": "let",
    "nodeId": "",
    "parentId": "",
    "parentType": "StringLiteral",
  },
  {
    "field": "body",
    "loc": SourceLocation {
      "end": Position {
        "column": 16,
        "index": 271,
        "line": 17,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 255,
        "line": 17,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "Program",
    "type": "ExpressionStatement",
  },
  {
    "field": "expression",
    "loc": SourceLocation {
      "end": Position {
        "column": 15,
        "index": 270,
        "line": 17,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 255,
        "line": 17,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "ExpressionStatement",
    "type": "AssignmentExpression",
  },
  {
    "field": "left",
    "loc": SourceLocation {
      "end": Position {
        "column": 5,
        "index": 260,
        "line": 17,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "greet",
      "start": Position {
        "column": 0,
        "index": 255,
        "line": 17,
      },
    },
    "name": "greet",
    "nodeId": "",
    "parentId": "",
    "parentType": "AssignmentExpression",
    "type": "Identifier",
  },
  {
    "field": "right",
    "loc": SourceLocation {
      "end": Position {
        "column": 15,
        "index": 270,
        "line": 17,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 8,
        "index": 263,
        "line": 17,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "AssignmentExpression",
    "type": "StringLiteral",
    "value": "hello",
  },
  {
    "field": "value",
    "nodeId": "",
    "parentId": "",
    "parentType": "StringLiteral",
  },
  {
    "field": "body",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 31,
        "index": 304,
        "line": 19,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 273,
        "line": 19,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "Program",
    "type": "VariableDeclaration",
  },
  {
    "field": "declarations",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 30,
        "index": 303,
        "line": 19,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 6,
        "index": 279,
        "line": 19,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclaration",
    "type": "VariableDeclarator",
  },
  {
    "field": "id",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 10,
        "index": 283,
        "line": 19,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "name",
      "start": Position {
        "column": 6,
        "index": 279,
        "line": 19,
      },
    },
    "name": "name",
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclarator",
    "type": "Identifier",
  },
  {
    "field": "init",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 30,
        "index": 303,
        "line": 19,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 13,
        "index": 286,
        "line": 19,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclarator",
    "type": "CallExpression",
  },
  {
    "field": "arguments",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 29,
        "index": 302,
        "line": 19,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": undefined,
      "start": Position {
        "column": 22,
        "index": 295,
        "line": 19,
      },
    },
    "nodeId": "",
    "parentId": "",
    "parentType": "CallExpression",
    "type": "StringLiteral",
    "value": "Marco",
  },
  {
    "field": "value",
    "kind": "const",
    "nodeId": "",
    "parentId": "",
    "parentType": "StringLiteral",
  },
  {
    "field": "callee",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 21,
        "index": 294,
        "line": 19,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 13,
        "index": 286,
        "line": 19,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "CallExpression",
    "type": "Identifier",
  },
]
`;

exports[`search const 1`] = `
{
  "document": {
    "field": "id",
    "loc": SourceLocation {
      "end": Position {
        "column": 14,
        "index": 14,
        "line": 1,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "SayHello",
      "start": Position {
        "column": 6,
        "index": 6,
        "line": 1,
      },
    },
    "name": "SayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassDeclaration",
    "type": "Identifier",
  },
  "id": "",
  "score": 1.8934129705547187,
}
`;

exports[`search const 2`] = `
{
  "document": {
    "field": "callee",
    "loc": SourceLocation {
      "end": Position {
        "column": 12,
        "index": 137,
        "line": 8,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "SayHello",
      "start": Position {
        "column": 4,
        "index": 129,
        "line": 8,
      },
    },
    "name": "SayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "NewExpression",
    "type": "Identifier",
  },
  "id": "",
  "score": 1.8934129705547187,
}
`;

exports[`search const 3`] = `
{
  "document": {
    "field": "id",
    "loc": SourceLocation {
      "end": Position {
        "column": 17,
        "index": 165,
        "line": 10,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 9,
        "index": 157,
        "line": 10,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "FunctionDeclaration",
    "type": "Identifier",
  },
  "id": "",
  "score": 1.8934129705547187,
}
`;

exports[`search const 4`] = `
{
  "document": {
    "field": "callee",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 21,
        "index": 294,
        "line": 19,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 13,
        "index": 286,
        "line": 19,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "CallExpression",
    "type": "Identifier",
  },
  "id": "",
  "score": 1.8934129705547187,
}
`;

exports[`search const 5`] = `
{
  "document": {
    "field": "key",
    "loc": SourceLocation {
      "end": Position {
        "column": 9,
        "index": 26,
        "line": 2,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "sayHello",
      "start": Position {
        "column": 1,
        "index": 18,
        "line": 2,
      },
    },
    "name": "sayHello",
    "nodeId": "",
    "parentId": "",
    "parentType": "ClassProperty",
    "type": "Identifier",
  },
  "id": "",
  "score": 1.8934129705547187,
}
`;

exports[`search const 6`] = `
{
  "document": {
    "field": "id",
    "kind": "let",
    "loc": SourceLocation {
      "end": Position {
        "column": 9,
        "index": 243,
        "line": 15,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "greet",
      "start": Position {
        "column": 4,
        "index": 238,
        "line": 15,
      },
    },
    "name": "greet",
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclarator",
    "type": "Identifier",
  },
  "id": "",
  "score": 2.587218330494152,
}
`;

exports[`search const 7`] = `
{
  "document": {
    "field": "id",
    "kind": "const",
    "loc": SourceLocation {
      "end": Position {
        "column": 12,
        "index": 186,
        "line": 11,
      },
      "filename": "/Users/marcoippolito/Documents/projects/dakira/packages/dakira/test/fixtures/javascript/fixture.js",
      "identifierName": "greet",
      "start": Position {
        "column": 7,
        "index": 181,
        "line": 11,
      },
    },
    "name": "greet",
    "nodeId": "",
    "parentId": "",
    "parentType": "VariableDeclarator",
    "type": "Identifier",
  },
  "id": "",
  "score": 2.587218330494152,
}
`;
